--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -6,11 +6,11 @@ spring:
     gateway:
       routes:
         - id: ms_empleados
-          uri: http://localhost:8500
+          uri: http://localhost:8600
           predicates:
             - Path=/api/empleados/**
-        - id: ms-user-service
-          uri: http://localhost:8600
+        - id: ms-empresas
+          uri: http://localhost:8500
           predicates:
             - Path=/api/empresas/**
 
