--- a/ms_empleados/src/main/resources/application.yml
+++ b/ms_empleados/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: ms_empleados
   datasource:
-    url: jdbc:postgresql://localhost:5432/empleadosDB
+    url: jdbc:postgresql://host.docker.internal:5432/empleadosDB
     username: postgres
     password: 12345
     driver-class-name: org.postgresql.Driver
@@ -24,5 +24,5 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://host.docker.internal:8761/eureka/
 
