--- a/ms-empresas/src/main/resources/application.yml
+++ b/ms-empresas/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: ms-empresas
   datasource:
-    url: jdbc:postgresql://host.docker.internal:5432/empresasDB
+    url: jdbc:postgresql://localhost:5432/empresasDB
     username: postgres
     password: 12345
     driver-class-name: org.postgresql.Driver
